--- a/Homepage.html
+++ b/Homepage.html
@@ -34,19 +34,11 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <div class="dropdown me-1">
-            <button class="btn dropdown-toggle custom-nav-hover rounded-pill" type="button" data-bs-toggle="dropdown"
-              aria-expanded="false">
-              Experiences
-            </button>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </div>
           <li class="nav-item me-1">
-            <a class="nav-link active custom-nav-hover rounded-pill" aria-current="page" href="#">Start</a>
+            <a class="nav-link active custom-nav-hover rounded-pill" aria-current="page" href="Homepage.html">Homepage</a>
+          </li>
+          <li class="nav-item me-1">
+            <a class="nav-link active custom-nav-hover rounded-pill" aria-current="page" href="Quiz.html">Start</a>
           </li>
           <li class="nav-item me-1">
             <a class="nav-link active custom-nav-hover rounded-pill" aria-current="page" href="#">Membership</a>
@@ -71,7 +63,7 @@
         <p class="mb-1 ms-2 fs-5 fw-lighter">Welcome to the best Trivia Quiz. Are you ready to answer</p>
         <p class="mb-1 ms-2 fs-5 fw-lighter">some difficult questions? Complete all the challenges and be</p>
         <p class=" ms-2 fs-5 fw-lighter">on the top of the leaderboards! Over 100000 active players!</p>
-        <a href="Homapage2.html" class="btn custom-btn ms-2 fw-bold">Take a quiz</a>
+        <a href="Quiz.html" class="btn custom-btn ms-2 fw-bold">Take a quiz</a>
       </div>
       <div class="col-md-6 pb-5">
         <img class="img-fluid" src="Images/img-1.avif" alt="Image 1">
