--- a/Homepage.html
+++ b/Homepage.html
@@ -41,7 +41,7 @@
             <a class="nav-link active custom-nav-hover rounded-pill" aria-current="page" href="Quiz.html">Start</a>
           </li>
           <li class="nav-item me-1">
-            <a class="nav-link active custom-nav-hover rounded-pill" aria-current="page" href="#">Membership</a>
+            <a class="nav-link active custom-nav-hover rounded-pill" aria-current="page" href="Membership.html">Membership</a>
           </li>
           <li class="nav-item me-1">
             <a class="nav-link active custom-nav-hover rounded-pill" aria-current="page" href="#">Leaderboards</a>
