--- a/Quiz.html
+++ b/Quiz.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Quiz</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="styles/style2.css">
@@ -32,7 +32,7 @@
                 <a class="nav-link active custom-nav-hover rounded-pill" aria-current="page" href="Quiz.html">Start</a>
               </li>
               <li class="nav-item me-1">
-                <a class="nav-link active custom-nav-hover rounded-pill" aria-current="page" href="#">Membership</a>
+                <a class="nav-link active custom-nav-hover rounded-pill" aria-current="page" href="Membership.html">Membership</a>
               </li>
               <li class="nav-item me-1">
                 <a class="nav-link active custom-nav-hover rounded-pill" aria-current="page" href="#">Leaderboards</a>
