--- a/Membership.html
+++ b/Membership.html
@@ -37,10 +37,10 @@
                 <a class="nav-link active custom-nav-hover rounded-pill" aria-current="page" href="Membership.html">Membership</a>
               </li>
               <li class="nav-item me-1">
-                <a class="nav-link active custom-nav-hover rounded-pill" aria-current="page" href="#">Leaderboards</a>
+                <a class="nav-link active custom-nav-hover rounded-pill" aria-current="page" href="Leaderboards.html">Leaderboards</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active custom-nav-hover rounded-pill" aria-current="page" href="#">Login</a>
+                <a class="nav-link active custom-nav-hover rounded-pill" aria-current="page" href="Login.html">Login</a>
               </li>
             </ul>
           </div>
