--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item me-1">
-            <a class="nav-link active custom-nav-hover rounded-pill" aria-current="page" href="Homepage.html">Homepage</a>
+            <a class="nav-link active custom-nav-hover rounded-pill" aria-current="page" href="index.html">Homepage</a>
           </li>
           <li class="nav-item me-1">
             <a class="nav-link active custom-nav-hover rounded-pill" aria-current="page" href="Quiz.html">Start</a>
